name:              Test01
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable Test01
  main-is:         Main.hs
  hs-source-dirs:  src
  extensions:      RankNTypes
  build-depends:   base,
                   mtl,
                   containers,
                   time,
                   GLUT,
                   linear,
                   reactive-banana

